--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>C.E</title>
+    <title>Estudo</title>
     <link rel="stylesheet" href="./src/css/style.css" />
   </head>
 
