--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>replit</title>
+    <title>Estudo</title>
     <link rel="stylesheet" href="./src/css/style.css" />
+    <script src="./src/js/script.js"></script>
   </head>
 
   <body>
@@ -33,18 +34,18 @@
           <li>Lógica de Programação e Algoritmos</li>
           <li>Lógica Matemática</li>
         </ul>
-        <p>ver conteúdo</p>
+        <a href="./src/pages/page1s.html"> Ver conteúdo</a>
       </div>
     </section>
     <section class="segundo">
       <div class="container">
         <h3>2° Semestre</h3>
         <ul>
-          <li>Banco de Dados</li>
-          <li>Orientação a Objetos</li>
           <li>Algebra Linear</li>
+          <li>Banco de Dados</li>
           <li>Estatistica e Probabilidade</li>
           <li>Lógica Matemática</li>
+          <li>Orientação a Objetos</li>
         </ul>
         <p>ver conteúdo</p>
       </div>
