--- a/src/pages/page1s.html
+++ b/src/pages/page1s.html
@@ -6,65 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cor da seleção de texto - @programador.cs</title>
     <link rel="stylesheet" href="../css/stylepages.css" />
-    <script src="../js/script.js"></script>
   </head>
 
   <body>
     <nav>
-      <a href="#">
-        <span data-texto="Circuitos Lógicos Digitais"
-          >Circuitos Lógicos Digitais</span
-        >
-        <ul class="hide">
-          <li>Opção 1</li>
-          <li>Opção 2</li>
-          <li>Opção 3</li>
+      <div class="cld">
+        <h2>Circuitos Lógicos</h2>
+        <ul>
+          <li>aula 1</li>
+          <li>aula 2</li>
+          <li>aula 3</li>
+          <li>aula 4</li>
         </ul>
-      </a>
-      <a href="#">
-        <span data-texto="Geometria Analítica">Geometria Analítica</span>
-        <ul class="hide">
-          <li>Opção 1</li>
-          <li>Opção 2</li>
-          <li>Opção 3</li>
+      </div>
+
+      <div class="ga">
+        <h2>Geometria Analítica</h2>
+        <ul>
+          <li>aula 1</li>
+          <li>aula 2</li>
+          <li>aula 3</li>
+          <li>aula 4</li>
         </ul>
-      </a>
-      <a href="#">
-        <span data-texto="Introdução a Programação Estruturada"
-          >Introdução a Programação Estruturada</span
-        >
-        <ul class="hide">
-          <li>Opção 1</li>
-          <li>Opção 2</li>
-          <li>Opção 3</li>
+      </div>
+
+      <div class="ipe">
+        <h2>Introdução a Programação Estruturada</h2>
+        <ul>
+          <li>aula 1</li>
+          <li>aula 2</li>
+          <li>aula 3</li>
+          <li>aula 4</li>
         </ul>
-      </a>
-      <a href="#">
-        <span data-texto="Lógica de Programação e Algoritmos"
-          >Lógica de Programação e Algoritmos</span
-        >
-        <ul class="hide">
-          <li>Opção 1</li>
-          <li>Opção 2</li>
-          <li>Opção 3</li>
+      </div>
+
+      <div class="lpa">
+        <h2>Lógica de Programação e Algoritmos</h2>
+        <ul>
+          <li>aula 1</li>
+          <li>aula 2</li>
+          <li>aula 3</li>
+          <li>aula 4</li>
         </ul>
-      </a>
-      <a href="#">
-        <span data-texto="Lógica Matemática">Lógica Matemática</span>
-        <ul class="hide">
-          <li>Opção 1</li>
-          <li>Opção 2</li>
-          <li>Opção 3</li>
+      </div>
+
+      <div class="lm">
+        <h2>Lógica Matemática</h2>
+        <ul>
+          <li>aula 1</li>
+          <li>aula 2</li>
+          <li>aula 3</li>
+          <li>aula 4</li>
         </ul>
-      </a>
-      <a href="#">
-        <span data-texto="PROGRAMADOR CS">PROGRAMADOR CS</span>
-        <ul class="hide">
-          <li>Opção 1</li>
-          <li>Opção 2</li>
-          <li>Opção 3</li>
-        </ul>
-      </a>
+      </div>
     </nav>
+    <script src="../js/script.js"></script>
   </body>
 </html>
