--- a/index.html
+++ b/index.html
@@ -9,45 +9,50 @@
   </head>
 
   <body>
-    <header>
-      <div class="container">
-        <a
-          href="https://login.microsoftonline.com/common/oauth2/v2.0/authorize?client_id=4765445b-32c6-49b0-83e6-1d93765276ca&redirect_uri=https%3A%2F%2Fwww.office.com%2Flandingv2&response_type=code%20id_token&scope=openid%20profile%20https%3A%2F%2Fwww.office.com%2Fv2%2FOfficeHome.All&response_mode=form_post&nonce=638129445855094564.NjYxMTM5YzYtMjMyMS00N2Q5LTljNzUtNGQ3N2MzZTExMTAxNzM0NzEwMWEtOTNjMC00NjcxLWE3MmMtMTc1ZGE0ZDE0NDZl&ui_locales=pt-BR&mkt=pt-BR&client-request-id=aeb1ebbf-e00c-4508-a857-ec150825be82&state=l4ElWKGCAFGRGQJBhbHucd0vO4dMezQeX6GwQtqD9HqoOaKLsGQUWWa2gkLleJRUuAikdcdrvZdW4V1TeppyonOgd7_T8KX4WPxeLgRWBc185iWBMbz-DA2bKwMVh97LtQ3uUddoHh9prcxHEP4HmMP2gRjpVSfDXCRHK0o3G7xf5lFpHMDPxzLwBu8Znbhr_huAsx5BnyUTK-7oktsuz8t3QxiCGMs4C0ToMHq6X1hpwOA0ORwLaL4qALYEZ4jtxZdouqLXfPE4VjQFFhx5oT34NZDxVBNYe_WHyf3aPcw&x-client-SKU=ID_NETSTANDARD2_0&x-client-ver=6.16.0.0"
-        >
-          <img src="./src/img/Office_365_(2013-2019).svg" class="office"
-          alt="logo do Office365" data-aos="fade-right" /img>
-        </a>
-        <a href="https://unip.br/aluno/central/">
-          <img src="./src/img/unip-logo.png" class="Unip" alt="logo da UNIP"
-          data-aos="fade-right" /img>
-        </a>
-        <h2>Conteúdos da Faculdade</h2>
-      </div>
-    </header>
-    <section class="primeiro">
-      <div class="container">
-        <h3>1° Semestre</h3>
-        <ul>
-          <li>Circuitos Lógicos Digitais</li>
-          <li>Geometria Analítica</li>
-          <li>Introdução a Programação Estruturada</li>
-          <li>Lógica de Programação e Algoritmos</li>
-          <li>Lógica Matemática</li>
-        </ul>
-        <a href="./src/pages/page1s.html"> Ver conteúdo</a>
+    <section>
+      <h2>1° Semestre</h2>
+      <div class="cards">
+        <div class="framework-card">
+          <img src="./src/imgs/cld.jpeg" />
+          <p>Circuitos Lógicos Digitais</p>
+        </div>
+        <div class="framework-card">
+          <img src="./src/imgs/ga.jpg" />
+          <p>Geometria Analítica</p>
+        </div>
+        <div class="framework-card">
+          <img src="./src/imgs/ipe.png" />
+          <p>Introdução a Programação Estruturada</p>
+        </div>
+        <div class="framework-card">
+          <img src="./src/imgs/lpa.png" />
+          <p>Lógica de Programação e Algoritmos</p>
+        </div>
+        <div class="framework-card">
+          <img src="./src/imgs/lm.png" />
+          <p>Lógica Matemática</p>
+        </div>
       </div>
     </section>
-    <section class="segundo">
-      <div class="container">
-        <h3>2° Semestre</h3>
-        <ul>
-          <li>Algebra Linear</li>
-          <li>Banco de Dados</li>
-          <li>Estatistica e Probabilidade</li>
-          <li>Lógica Matemática</li>
-          <li>Orientação a Objetos</li>
-        </ul>
-        <p>ver conteúdo</p>
+    <section>
+      <h2>2° Semestre</h2>
+      <div class="cards">
+        <div class="framework-card">
+          <img src="./src/imgs/bd.png" />
+          <p>Banco de Dados</p>
+        </div>
+        <div class="framework-card">
+          <img src="./src/imgs/lpoo.png" />
+          <p>Orientação a Objetos</p>
+        </div>
+        <div class="framework-card">
+          <img src="./src/imgs/al.jpg" />
+          <p>Algebra Linear</p>
+        </div>
+        <div class="framework-card">
+          <img src="./src/imgs/ep.jpg" />
+          <p>Estatistica e Probabilidade</p>
+        </div>
       </div>
     </section>
   </body>
