--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <h2>1° Semestre</h2>
       <div class="cards">
         <div class="framework-card">
-          <img src="./src/imgs/cld.jpeg" />
+          <img src="./src/imgs/cld.png" />
           <p>Circuitos Lógicos Digitais</p>
         </div>
         <div class="framework-card">
-          <img src="./src/imgs/ga.jpg" />
+          <img src="./src/imgs/ga.png" />
           <p>Geometria Analítica</p>
         </div>
         <div class="framework-card">
@@ -46,11 +46,11 @@
           <p>Orientação a Objetos</p>
         </div>
         <div class="framework-card">
-          <img src="./src/imgs/al.jpg" />
+          <img src="./src/imgs/al.png" />
           <p>Algebra Linear</p>
         </div>
         <div class="framework-card">
-          <img src="./src/imgs/ep.jpg" />
+          <img src="./src/imgs/est.png" />
           <p>Estatistica e Probabilidade</p>
         </div>
       </div>
