--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width" />
     <title>Estudo</title>
     <link rel="stylesheet" href="./src/css/style.css" />
-    <script src="./src/js/script.js"></script>
   </head>
 
   <body>
     <section>
       <h2>1° Semestre</h2>
+      <a
+        href="./semestres/primeiro.html"
+        target="_blank"
+        rel="noopener noreferrer"
+        >ver matérias</a
+      >
       <div class="cards">
         <div class="framework-card">
           <img src="./src/imgs/cld.png" />
@@ -55,5 +60,6 @@
         </div>
       </div>
     </section>
+    <script src="./src/js/script.js"></script>
   </body>
 </html>
